package structural.decorator.tokenize;

import java.util.List;

public interface MyTokenize {
    List<String> tokenize();
}
